objects/wkcc__SurveySchedule__c.object
<CustomObject>
    <fields>
        <fullName>wkcc__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When you reactivate a schedule, reset the Start Date if needed to make it later than the current date and time.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__AuthenticationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether recipients of the survey sent by this schedule must authenticate to access the survey.</description>
        <inlineHelpText>Surveys that require authentication can be sent to individuals only if they are associated with a user record and if we have an email address defined for them. Recipients must also belong to the selected community.</inlineHelpText>
        <label>Authentication Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__EmailTemplateId__c</fullName>
        <label>Email Template</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkcc__IncludeSublocations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Sublocations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IndividualRole__c</fullName>
        <label>Individual Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__NextSendDate__c</fullName>
        <label>Next Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkcc__RecipientType__c</fullName>
        <label>Recipient Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>wkcc__SurveyRecipientType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__ScheduleFrequency__c</fullName>
        <label>Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ONCE</fullName>
                    <default>true</default>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>DAILY</fullName>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>WEEKLY</fullName>
                    <label>Weekly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkcc__Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey</referenceTo>
        <relationshipLabel>Survey Schedules</relationshipLabel>
        <relationshipName>SurveySchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Schedule</label>
    <listViews>
        <fullName>wkcc__AllSurveySchedules</fullName>
        <columns>NAME</columns>
        <columns>wkcc__Survey__c</columns>
        <columns>wkcc__ScheduleFrequency__c</columns>
        <columns>wkcc__StartDate__c</columns>
        <columns>wkcc__EndDate__c</columns>
        <columns>wkcc__NextSendDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Survey Schedules</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>wkcc__EndDateToBeOnOrAfterStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNULL( wkcc__EndDate__c )),
DATEVALUE(wkcc__StartDate__c) &gt; wkcc__EndDate__c)</errorConditionFormula>
        <errorDisplayField>wkcc__EndDate__c</errorDisplayField>
        <errorMessage>End Date needs to be on or after Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkcc__RecipientTypeNotChangeable</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(wkcc__RecipientType__c)</errorConditionFormula>
        <errorDisplayField>wkcc__RecipientType__c</errorDisplayField>
        <errorMessage>You can&apos;t change the recipient type after a schedule is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkcc__StartDateNeedsToBeFuture</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(wkcc__StartDate__c) 
    ),
        wkcc__StartDate__c &lt; Now() - (1/1440)
)</errorConditionFormula>
        <errorDisplayField>wkcc__StartDate__c</errorDisplayField>
        <errorMessage>Give the schedule a start date that&apos;s in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkcc__UpdateStartDateToFuture</fullName>
        <active>true</active>
        <description>When the user reactivate or update the survey schedule, update the start date to a future date if the date is a previous date time.</description>
        <errorConditionFormula>AND (!ISCHANGED(wkcc__StartDate__c),
    wkcc__StartDate__c &lt;= NOW(),
    OR (AND ( !PRIORVALUE( wkcc__Active__c ), wkcc__Active__c),
        ISCHANGED( wkcc__ScheduleFrequency__c )
    )
)</errorConditionFormula>
        <errorDisplayField>wkcc__StartDate__c</errorDisplayField>
        <errorMessage>Give the schedule a start date that&apos;s in the future.</errorMessage>
    </validationRules>
</CustomObject>